--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -41,11 +41,12 @@ header {
 }
 
 nav ul {
+
     list-style: none;
     display: flex;
     gap: 30px;
-    padding: 0;
-    margin: 0px;
+    padding: 20px;
+    margin-right:100px ;
 }
 
 nav ul li a {
