--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -36,8 +36,8 @@ header {
 .logo img {
     position:absolute;
     left: 27%;
-    width: 210px; /* Adjust logo size */
-    margin-right: 100px; /* Space between the logo and the h1 */
+    width: 210px; 
+    margin-right: 100px; 
 }
 
 nav ul {
@@ -74,7 +74,7 @@ nav ul li a {
 
 .hero-btn {
     position: absolute;
-    bottom: 20px; /* Adjust as needed */
+    bottom: 20px;
     left: 80%;
     transform: translateX(-50%);
     background-color: #cfe2ff;
@@ -130,7 +130,7 @@ section {
 }
 
 #currentWeather img, #forecast img {
-    width: 60px; /* Adjust the size as needed */
+    width: 60px; 
     height: 50px;
     vertical-align: middle;
 }
